tests/fixtures/errors/bad_const_casing.ksr
// Bad const casing: const must be UPPER_SNAKE_CASE
const bad_name: Dimensionless = 1.0;
